src/test/deca/context/invalid/test_error_3.58.deca
// Description:
//    Soulève l'erreur (3.58)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'int' et 'boolean' ne sont pas compatibles avec l'opérateur binaire '>' (règle 3.58)
//
// Historique:
//      cree le 06/01/2022

{
	boolean var;
    1.0 > 1;
}
